1. Correction to build-server.sh to point to renamed ubkg-api-spec.yaml. 2. New endpoint:  /datasets
